07 - Moved - star unstar into directive
08 - Fixed - grid indicators for user inbox and filtered inboxes.
09 - Added - starred inbox tab and fixed mail notification update(It was not updating on launch workflow).
10 - Removed - star/un-star from group mail.
11 - Added - Fields for grid/magazine view of user inbox. Field for search type of correspondence site(advanced/simple).
12 - Added - Advanced search feature for correspondence site in distribution list (Admin section).
13 - Added - Distribution list in manage correspondence sites.
14 - Added - Advanced/simple search in correspondence sites.
15 - Changed - Search screens to be having similar user experience as of add document.
16 - Added - G2G section.
17 - Added - document serial, document number, correspondence sites columns to the search grids.

Fixed issues :
12504: central archive - in central archive OU while adding a paper outgoing or incoming document there is two fields in paper outgoing while only one in incoming <check attached>
12643: central archive - when teh archive user add a new paper outgoing or incoming the ou field should not be mandatory
12310: Delegation - End date is expired still the Out of Office functionality toggle is enabled and functionality too.

fixed Issues:
13510: Can't search by Linked entity from General Search.
13514: Regression - Serial number - The order of the serial number displayed inside the document in serial number key.
16681:V2.1.1 -view versions- There is no permission for viewing the document versions in the admin


10/30/2018
-------------
1. added docFullSerial column in central archive and department ready to export
2. set the search year to be current year in all search pages.
3. changed the department column name to sender reg ou in department incoming grid
4. hide the version actions in department incoming, returned and sent items.
5. added thumbnailMode property to global settings
6. added "fromEditOnDesktop" in outgoing and internal models.